--- a/argusApp/resources/sass/layouts/_base-layout.scss
+++ b/argusApp/resources/sass/layouts/_base-layout.scss
@@ -33,3 +33,11 @@ input {
 a {
     text-decoration: none;
 }
+
+.icon {
+    background-size: cover !important;
+    background-position: 50% 50% !important;
+    height: 200px;
+    width: 200px;
+    border-radius: 20px;
+}
