--- a/argusApp/public/css/app.css
+++ b/argusApp/public/css/app.css
@@ -4,6 +4,7 @@ main {
   margin: 0 auto;
   font-family: "Comfortaa", cursive;
   min-height: 100vh;
+  background: #f7f7f7;
 }
 
 form {
@@ -11,9 +12,14 @@ form {
   max-width: 400px;
 }
 
-input {
+button {
+  font-family: "Comfortaa", cursive;
+}
+
+.auth {
   border: none;
   text-decoration: none;
+  border: 1px solid #d1d1d1;
   background: #fff;
   padding: 15px;
   border-radius: 10px;
@@ -57,7 +63,112 @@ a {
   background-position: 50% 50% !important;
   height: 200px;
   width: 200px;
-  border-radius: 20px;
+  border-radius: 1rem;
+  border: 1px solid #d1d1d1;
+}
+
+.searchBar {
+  position: relative;
+}
+
+.search::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  position: absolute;
+  left: 15px;
+  top: 35px;
+  color: #d1d1d1;
+  content: "\F002";
+}
+
+#myPlantFilter {
+  border: none;
+  text-decoration: none;
+  border: 1px solid #d1d1d1;
+  background: #fff;
+  padding: 15px 15px 15px 40px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  width: 100%;
+  margin-top: 20px;
+  font-family: "Comfortaa", cursive;
+}
+
+.add::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #d1d1d1;
+  content: "\F055";
+}
+
+.add-alt::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #d1d1d1;
+  content: "\F067";
+}
+
+.plant::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F4D8";
+}
+
+.home::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F015";
+}
+
+.profile::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F007";
+}
+
+.logout::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F060";
+}
+
+.close::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F00D";
+}
+
+.edit::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F304";
+}
+
+.delete::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F1F8";
+}
+
+.info::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F05A";
+}
+
+.save::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #000;
+  content: "\F0C7";
 }
 
 .darken {
