--- a/argusApp/resources/sass/variables/_fonts.scss
+++ b/argusApp/resources/sass/variables/_fonts.scss
@@ -1,1 +1,27 @@
 $font: 'Comfortaa', cursive;
+
+//25 px <p>
+$body-mobile: 0.9rem;
+$body-tablet: 1rem;
+$body-desktop: 1.1rem;
+
+//30 px <h5>
+$card-mobile: 1.2rem;
+$card-tablet: 1.3rem;
+$card-desktop: 1.4rem;
+
+//35 px <h4>
+$subhead-mobile: 1.5rem;
+$subhead-tablet: 1.6rem;
+$subhead-desktop: 1.7rem;
+
+//40 px <h3>
+$nav-mobile: 1.7rem;
+$nav-tablet: 1.8rem;
+$nav-desktop: 1.9rem;
+
+
+//60 px <h2>
+$head-mobile: 1.9rem;
+$head-tablet: 2.4rem;
+$head-desktop: 3.4rem;
