--- a/argusApp/resources/sass/layouts/_auth.scss
+++ b/argusApp/resources/sass/layouts/_auth.scss
@@ -1,70 +1,100 @@
-.darken {
-  background: rgba(0, 0, 0, 0.5);
-  margin: 0 auto;
-  min-height: 100vh;
-}
+body {
 
-.background {
-  background-image: url("/images/bg.jpg");
-  background-size: cover;
-  background-position: 50% 20%;
-  margin: 0 auto;
-  min-height: 100vh;
-}
+  .auth {
+    background-image: url("/images/bg.jpg");
+    background-size: cover;
+    background-position: 50% 20%;
+    margin: 0 auto;
+    min-height: 100vh;
+    .darken {
+      background: rgba(0, 0, 0, 0.5);
+      margin: 0 auto;
+      min-height: 100vh;
+      .container {
+        padding: 120px 30px;
+        text-align: center;
 
-.container {
-  padding: 120px 30px;
-  text-align: center;
-}
 
-.logo {
-  height: 100%;
-  width: 150px;
-  margin: auto;
-  transition: all .5s ease-in-out;
-}
+      form {
+        margin: auto;
+        max-width: 400px;
 
-.authlink {
-  color: $white;
-  text-decoration: underline;
-  margin-top: 20px;
-}
+      }
 
-.linkFlex {
-  display: flex;
-  max-width: 400px;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
+      .invalid-feedback {
+        color: $white;
+        height: 1.25rem;
+        margin-top: 1.5rem;
+        display: inline-block;
+      }
 
-.authbtn {
-  border: none;
-  text-decoration: none;
-  display: inline-block;
-  margin-top: 30px;
-  font-family: $font;
-  color: $white;
-  padding: 15px;
-  box-sizing: border-box;
-  width: 100%;
-  border-radius: 10px;
-  background: $purple;
-  cursor: pointer;
-  transition: all .5s ease-in-out;
-}
 
-.authbtn:hover {
-  background: $white;
-  color: $purple;
-  transition: all .5s ease-in-out;
-}
+      input {
+          border: none;
+          text-decoration: none;
+          background: $white;
+          padding: 15px;
+          border-radius: 10px;
+          box-sizing: border-box;
+          width: 100%;
+          margin-top: 20px;
+          font-family: $font;
+      }
 
-@media (min-width: $breakpoint-mobile) {
-  .logo {
-      height: 100%;
-      width: 200px;
-      margin: auto;
-      transition: all .5s ease-in-out;
+
+        .logo {
+          height: 100%;
+          width: 200px;
+          margin: auto;
+          transition: all .5s ease-in-out;
+        }
+        .authlink {
+          color: $white;
+          text-decoration: underline;
+          margin-top: 20px;
+        }
+        .linkFlex {
+          display: flex;
+          max-width: 400px;
+          flex-direction: row;
+          justify-content: space-between;
+          flex-wrap: wrap;
+        }
+        .authbtn {
+          border: none;
+          text-decoration: none;
+          display: inline-block;
+          margin-top: 30px;
+          font-family: $font;
+          color: $white;
+          padding: 15px;
+          box-sizing: border-box;
+          width: 100%;
+          border-radius: 10px;
+          background: $purple;
+          cursor: pointer;
+          transition: all .5s ease-in-out;
+        }
+        .authbtn:hover {
+          background: $white;
+          color: $purple;
+          transition: all .5s ease-in-out;
+        }
+      }
+    }
+  }
+
+
+ }
+
+
+ @media (min-width: $tablet-break) {
+  body{
+    .logo {
+        height: 100%;
+        width: 200px;
+        margin: auto;
+        transition: all .5s ease-in-out;
+    }
   }
 }
