--- a/argusApp/resources/sass/layouts/_base-layout.scss
+++ b/argusApp/resources/sass/layouts/_base-layout.scss
@@ -1,43 +1,110 @@
-
-
-
-html, body, main {
-    margin: 0 auto;
-    font-family: $font;
-    min-height: 100vh;
-}
-
-
-form {
-    margin: auto;
-    max-width: 400px;
-}
-
-input {
-    border: none;
-    text-decoration: none;
-    background: $white;
-    padding: 15px;
-    border-radius: 10px;
-    box-sizing: border-box;
+html {
+    margin : 0;
+    padding: 0;
     width: 100%;
-    margin-top: 20px;
+    height: 100%;
+ }
+
+ body {
+    margin : 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     font-family: $font;
-}
+    background-color: $bg;
+    .invisibleHeader {
+      display: none;
+    }
 
-::placeholder {
-    font-family: $font;
-    color: $grey;
-}
+    ::placeholder {
+        font-family: $font;
+        color: $grey;
+    }
 
-a {
-    text-decoration: none;
-}
+    input {
+        border: 1px solid #DDDDDD;
+        text-decoration: none;
+        background: $white;
+        padding: 15px;
+        border-radius: 10px;
+        box-sizing: border-box;
+        font-family: $font;
+        &:focus {
+            outline: 1px solid #c4ddb2;
+        }
+    }
 
-.icon {
-    background-size: cover !important;
-    background-position: 50% 50% !important;
-    height: 200px;
-    width: 200px;
-    border-radius: 20px;
-}
+    a {
+        text-decoration: none;
+    }
+
+    p {
+        font-size:$body-mobile;
+    }
+
+    h2 {
+        font-size:$head-mobile;
+    }
+
+    h3 {
+        font-size:$nav-mobile;
+    }
+
+    h4 {
+        font-size:$subhead-mobile;
+    }
+
+    h5 {
+        font-size:$card-mobile;
+    }
+
+ }
+
+
+ @media (min-width: $desktop-break) {
+    body{
+        p {
+           font-size: $body-tablet;
+        }
+
+        h2 {
+            font-size:$head-tablet;
+        }
+
+        h3 {
+            font-size:$nav-tablet;
+        }
+
+        h4 {
+            font-size:$subhead-tablet;
+        }
+
+        h5 {
+            font-size:$card-tablet;
+        }
+    }
+ }
+
+ @media (min-width: $desktop-break) {
+    body{
+        p {
+           font-size: $body-desktop;
+        }
+
+        h2 {
+            font-size:$head-desktop;
+        }
+
+        h3 {
+            font-size:$nav-desktop;
+        }
+
+        h4 {
+            font-size:$subhead-desktop;
+        }
+
+        h5 {
+            font-size:$card-desktop;
+        }
+    }
+ }
