--- a/argusApp/public/css/app.css
+++ b/argusApp/public/css/app.css
@@ -43,6 +43,10 @@ body ::placeholder {
   color: #d1d1d1;
 }
 
+body button {
+  font-family: "Comfortaa", cursive;
+}
+
 body input {
   border: 1px solid #DDDDDD;
   text-decoration: none;
@@ -59,6 +63,13 @@ body input:focus {
 
 body a {
   text-decoration: none;
+}
+
+body .add-alt::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #d1d1d1;
+  content: "\F067";
 }
 
 body p {
