--- a/argusApp/resources/css/app.css
+++ b/argusApp/resources/css/app.css
@@ -28,6 +28,9 @@ body ::placeholder {
   font-family: "Comfortaa", cursive;
   color: #d1d1d1;
 }
+body button {
+  font-family: "Comfortaa", cursive;
+}
 body input {
   border: 1px solid #DDDDDD;
   text-decoration: none;
@@ -42,6 +45,12 @@ body input:focus {
 }
 body a {
   text-decoration: none;
+}
+body .add-alt::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #d1d1d1;
+  content: "\f067";
 }
 body p {
   font-size: 0.9rem;
