--- a/argusApp/resources/sass/layouts/_base-layout.scss
+++ b/argusApp/resources/sass/layouts/_base-layout.scss
@@ -21,6 +21,10 @@ html {
         color: $grey;
     }
 
+    button {
+        font-family: "Comfortaa", cursive;
+      }
+
     input {
         border: 1px solid #DDDDDD;
         text-decoration: none;
@@ -38,6 +42,91 @@ html {
         text-decoration: none;
     }
 
+    //the following classes are reserved strictly for font awesome icons:
+    // 1) add
+    // 2) add-alt
+    // 3) plant
+    // 4) home
+    // 5) profile
+    // 6) logout
+    // 7) close
+    // 8) edit
+    // 9) delete
+    // 10) info
+    // 11) save
+
+
+      .add-alt::before {
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        color: #d1d1d1;
+        content: "\F067";
+      }
+
+    //   .plant::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F4D8";
+    //   }
+
+    //   .home::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F015";
+    //   }
+
+    //   .profile::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F007";
+    //   }
+
+    //   .logout::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F060";
+    //   }
+
+    //   .close::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F00D";
+    //   }
+
+    //   .edit::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F304";
+    //   }
+
+    //   .delete::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F1F8";
+    //   }
+
+    //   .info::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F05A";
+    //   }
+
+    //   .save::before {
+    //     font-family: "Font Awesome 5 Free";
+    //     font-weight: 900;
+    //     color: #000;
+    //     content: "\F0C7";
+    //   }
+
+    //font styles below
     p {
         font-size:$body-mobile;
     }
