--- a/argusApp/resources/sass/variables/_colors.scss
+++ b/argusApp/resources/sass/variables/_colors.scss
@@ -1,6 +1,8 @@
 $white: #fff;
 $black: #000;
 $green: #597249;
+$greyGreen: #d1dccd;
 $purple: #624972;
 $bg: #f7f7f7;
 $grey: #d1d1d1;
+$grey-2: #4e4e4e;
