--- a/argusApp/public/css/app.css
+++ b/argusApp/public/css/app.css
@@ -74,31 +74,45 @@ body .add-alt::before {
 
 body p {
   font-size: 0.9rem;
+  margin: 0;
+  padding: 0;
 }
 
 body h2 {
   font-size: 1.9rem;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 body h3 {
   font-size: 1.7rem;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 body h4 {
   font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 body h5 {
   font-size: 1.2rem;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 700px) {
   body p {
     font-size: 1rem;
   }
 
   body h2 {
-    font-size: 2.4rem;
+    font-size: 2.6rem;
   }
 
   body h3 {
@@ -229,7 +243,7 @@ body .auth .darken .container .authbtn:hover {
   transition: all .5s ease-in-out;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 700px) {
   body .logo {
     height: 100%;
     width: 200px;
